gallery frame in place, no js

--- a/index.html
+++ b/index.html
@@ -44,21 +44,25 @@
     <br>
     <h2>Here are some examples of my work</h2>
     <br>
-    <div class="card--frame">
-      <div class="card--inner-pane">
 
 
-        <div class="card-left-section">
-          <img src="/images/gallery/lld-capture.png" >
+
+
+    <div class="card--gallery">
+      <div class="card--gallery-inner">
+
+
+        <div class="gallery-img-section">
+          <img src="/images/gallery/lld-capture.png">
         </div>
 
-        <div class="card-right-section">
+        <div class="gallery-right-section">
           <h3>Client project</h3>
-          <p><a href="www.dev.looseleashdog.com">www.looseleashdog.com</a></p>
+          <p><a href="https://www.dev.looseleashdog.com" target="_blank" >www.looseleashdog.com</a></p>
           <br>
           <h4>Stack</h4>
           <p>Node.js, Express, Ejs, JS, Prismic, Curator API, EmailJS</p>
-          
+
         </div>
 
 
@@ -67,22 +71,22 @@
     </div>
   </div>
 
-  <br>
 
-  <div class="card--frame">
-    <div class="card--inner-pane">
+  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+    <div class="card--gallery-inner" style="overflow-y: scroll;">
       <p>This project is for a local business-woman sole-proprietor. Her business model has been restricted to
         Instagram, limiting her ability to provide her clientele and community with all that she has to offer. This
         website allows her to showcase her client's good behavior and have a blog where she can generate affiliate
         links and provide additional learning and enrichment opportunities to her clients.</p>
+      <p>I used Node.js, express, and EJS to create the backend of the site. I connected a headless-CMS and built a blog
+        main page and post template that autopopulates from the CMS. I connected the client's primary business traffic
+        through a social media aggregator API enabling link-through SEO and audience ease-of-access.</p>
     </div>
   </div>
 
   <br>
 
 
-
-  </div>
 
   <div class="experience-container">
 
