second gallery pane added. feeling the bigger picture

--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@
     <h2>Here are some examples of my work</h2>
     <br>
 
-
-
-
     <div class="card--gallery">
       <div class="card--gallery-inner">
 
@@ -58,19 +55,17 @@
 
         <div class="gallery-right-section">
           <h3>Client project</h3>
-          <p><a href="https://www.dev.looseleashdog.com" target="_blank" >www.looseleashdog.com</a></p>
+          <p><a href="https://www.dev.looseleashdog.com" target="_blank">www.looseleashdog.com</a></p>
           <br>
           <h4>Stack</h4>
           <p>Node.js, Express, Ejs, JS, Prismic, Curator API, EmailJS</p>
 
         </div>
 
-
       </div>
 
     </div>
   </div>
-
 
   <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
     <div class="card--gallery-inner" style="overflow-y: scroll;">
@@ -85,8 +80,49 @@
   </div>
 
   <br>
+  <br>
+  <div class="card--gallery">
+    <div class="card--gallery-inner">
 
 
+      <div class="gallery-img-section">
+        <img src="/images/gallery/simon-capture2.png">
+      </div>
+
+      <div class="gallery-right-section">
+        <h3>Client project</h3>
+        <p><a href="https://rideoutweb.github.io/personal--the-simon-game/" target="_blank">A Simon Game</a></p>
+        <br>
+        <h4>Stack</h4>
+        <p>HTML, CSS, JavaScript, jQuery</p>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+    <div class="card--gallery-inner" style="overflow-y: scroll;">
+      <p>A "Simon Game" was one of the projects in the course I took. I decided to not follow the directions and simply
+        complete the assignment knowing the basic function of a simon game. I incorporated pop-culture sounds and some
+        distractions to make it difficult. The player can double-click on various background elements and make them
+        slowly change color. Another single-click on that same element will stop the color change.</p>
+      <p>This was my first solo project. I used jQuery for DOM manipulation, JS for control flow, and css for animations
+        and transitions. The site is built using CSS Grid to ease in scaling to increased number of squares, or to aide
+        in mobile development. Good luck, don't take Arnold too seriously.</p>
+    </div>
+  </div>
+
+  <br>
+  <br>
+
+  <div class="organization-container">
+    <div>
+      <h2 class="creativity-text"><em>Creativity and logic are not mutually exclusive, I think they go hand in hand.
+          Organization allows us to communicate effectively and with style.</em></h2>
+    </div>
+  </div>
 
   <div class="experience-container">
 
@@ -96,8 +132,8 @@
         <img class="layout-img" src="images/layout.png">
       </div>
       <div class="inner-exp-cont">
-        <p class="experience-right">I have a keen eye for the flow of the page. I learned layout and design principles
-          using Quark and an offset printing press. Clearly delivering information is the key to effective
+        <p class="experience-right">I learned layout and design principles first using Quark and staging a document for
+          physical printing using an offset printing press. Clearly delivering information is the key to effective
           communication.</p>
       </div>
     </div>
@@ -139,8 +175,7 @@
 
   <div class="organization-container">
     <div>
-      <h2 class="creativity-text"><em>Creativity and logic are not mutually exclusive, I think they go hand in hand.
-          Organization allows us to communicate effectively and with style.</em></h2>
+      <h2 class="creativity-text"><em>Almost at the end now...</em></h2>
     </div>
   </div>
 
