--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
 
   <div class="top-container">
-    <h1>I'm William</h1>
-    <img class="invisible-man" src="/images/invisible-man.png">
+    <h1>Hi, I'm William</h1>
+    <img class="avatar" src="/images/avatar.png">
     <h2><em>Great development & design solves problems.</em></h2>
   </div>
 
@@ -60,11 +60,14 @@
         </div>
 
         <div class="gallery-right-section">
-          <h3>Client project</h3>
+          <h3>Client Project</h3>
           <p><a href="https://www.dev.looseleashdog.com" target="_blank">www.looseleashdog.com</a></p>
           <br>
           <h4>Stack</h4>
           <p>Node.js, Express, Ejs, JS, Prismic, Curator API, EmailJS</p>
+          <button class="github-btn" type="button"
+            onclick="window.location.href='https://github.com/rideoutweb/freelance--loose-leash-dog'"
+            target="_blank">View GitHub Repo</button>
         </div>
 
       </div>
@@ -96,11 +99,14 @@
         </div>
 
         <div class="gallery-right-section">
-          <h3>Client project</h3>
+          <h3>Personal Project</h3>
           <p><a href="https://rideoutweb.github.io/personal--the-simon-game/" target="_blank">A Simon Game</a></p>
           <br>
           <h4>Stack</h4>
           <p>HTML, CSS, JavaScript, jQuery</p>
+          <button class="github-btn" type="button"
+            onclick="window.location.href='https://github.com/rideoutweb/personal--the-simon-game'" target="_blank">View
+            GitHub Repo</button>
         </div>
 
       </div>
@@ -218,59 +224,44 @@
       </div>
 
     </div>
+
   </div>
-
-
 
   <div class="contact-container">
     <br>
-
     <div class="card--frame">
-      <div class="card--inner-pane">
 
-        <form id="contact-form" class="contact-form" name="contact">
+      <form id="contact-form" class="contact-form" name="contact">
 
-          <div class="card-top-section">
-            <label class="form-title">Your Name:</label>
-            <input class="form-entry" type="text" name="user_name" oninput="formFieldCheck()">
-            <label class="form-title">Email:</label>
-            <input class="form-entry" type="email" name="user_email" oninput="formFieldCheck()">
-            <button id="contact-button" class="card-btn-topright" type="submit"
-              onclick="contactResponse()">Send</button>
-          </div>
-
-          <div class="card-bottom-section">
-            <label class="form-title">Message:</label>
-            <textarea class="form-textarea" name="message" oninput="formFieldCheck()"></textarea>
-          </div>
-
-        </form>
-
-        <div id="hidden-response" class="hidden-response">
-          <div class="response-box">
-            <p>Thanks!</p>
-            <p>Your message has been sent</p>
-            <p>I'm looking forward to talking with you, I will reach out within 2 or 3 business days.</p>
-            <button type="button" class="hidden-button" onclick="location.href='/blog'" />Check out the Blog</button>
-          </div>
+        <div class="card-top-section">
+          <label class="form-title">Your Name:</label>
+          <input class="form-entry" type="text" name="user_name" oninput="formFieldCheck()">
+          <label class="form-title">Email:</label>
+          <input class="form-entry" type="email" name="user_email" oninput="formFieldCheck()">
+          <div class="stamp-wrap" ></div>
+          <button id="contact-button" class="card-btn-topright" type="submit" onclick="contactResponse()">Send</button>
+        
         </div>
 
+        <div class="card-bottom-section">
+          <label class="form-title">Message:</label>
+          <textarea class="form-textarea" name="message" oninput="formFieldCheck()"></textarea>
+        </div>
+
+      </form>
+
+      <div id="hidden-response" class="hidden-response">
+        <div class="response-box">
+          <p>Thanks!</p>
+          <p>Your message has been sent</p>
+          <p>I'm looking forward to talking with you, I will reach out within 2 or 3 business days.</p>
+          <button type="button" class="hidden-button" onclick="location.href='/blog'" />Check out the Blog</button>
+        </div>
       </div>
+
     </div>
     <br>
   </div>
-
-  <br>
-
-  <br>
-
-  <br>
-
-  <br>
-
-
-
-
   <script src="index.js" charset="utf-8"></script>
 </body>
 
