layout sweep, changed fonts, color sweep

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- API -->
   <!-- need EmailJS code  -->
   <!-- Fonts -->
+  <link rel="stylesheet" href="https://use.typekit.net/whd6rrl.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,400;0,700;1,400&family=Sacramento&display=swap">
 </head>
@@ -21,35 +22,31 @@
 <body>
 
   <div class="top-container">
-    <h1>Hi, I'm William</h1>
+    <h1>hi, i'm william</h1>
     <img class="avatar" src="/images/avatar.png">
-    <h2><em>Great development & design solves problems.</em></h2>
+    <h2>i'm a web developer.</h2>
   </div>
 
-  <div class="about-container">
+  <div class="banner">
 
     <div class="inner-about-container">
       <img class="laptop-code" src="/images/laptop-code.png">
     </div>
 
     <div class="inner-about-container">
-      <h2 class="about">A bit about me</h2>
-      <p class="about">I'm new to the field and super excited to be here. I have been a classical musician and educator
-        for almost 15 years, and have decided to move on.</p>
+      <h2 class="about-title">A bit about me</h2>
+      <p class="about">I'm new to the field and super excited to be here. I was a classical music instructor and
+        performer for 15 years, now I'm moving on.</p>
     </div>
 
   </div>
 
-  <div class="portfolio-container">
+  <div class="gallery-container">
     <br>
     <h2>Here are some examples of my work</h2>
     <br>
 
-
-
-
-
-    <!-- || Gallery Frame  -->
+    <!-- || Gallery1 Frame  -->
     <div class="card--gallery">
       <div class="card--gallery-inner">
 
@@ -87,8 +84,8 @@
     </div>
     <br>
     <br>
-
-    <!-- || Gallery Frame  -->
+    <br>
+    <!-- || Gallery2 Frame  -->
     <div class="card--gallery">
       <div class="card--gallery-inner">
 
@@ -132,75 +129,98 @@
   <br>
   <br>
 
-  <div class="organization-container">
+
+  <div class="banner">
     <div>
-      <h2 class="creativity-text"><em>Creativity and logic are not mutually exclusive, I think they go hand in hand.
-          Organization allows us to communicate effectively and with style.</em></h2>
+      <h2 class="creativity-text">Creativity and logic are not mutually exclusive, I think they go hand in hand.
+        Organization allows us to communicate effectively and with style.</h2>
     </div>
   </div>
+
+
+
 
   <div class="experience-container">
+    <div class="exp-wrap">
 
-    <h2>Previous experience</h2>
-    <div class="pre-layout-container">
-      <div class="inner-exp-cont">
-        <img class="layout-img" src="images/layout.png">
+      <h2>Previous experience</h2>
+
+      <div class="layout-container">
+        <div class="exp-cont-inner">
+          <img class="layout-img" src="images/layout.png">
+        </div>
+        <div class="exp-cont-inner">
+          <p class="exp-text-right">I learned layout and design principles first using Quark and staging a document for
+            physical printing using an offset printing press. Clearly delivering information is the key to effective
+            communication. Digital media allows for the broadest audience.</p>
+        </div>
       </div>
-      <div class="inner-exp-cont">
-        <p class="experience-right">I learned layout and design principles first using Quark and staging a document for
-          physical printing using an offset printing press. Clearly delivering information is the key to effective
-          communication.</p>
+
+      <hr style="width: 350px; margin: 15px auto;">
+
+      <div class="remote-container">
+        <div class="exp-cont-inner">
+          <p class="exp-text-left">My music instruction business was conducted via online video chat. It allowed me to
+            reach a wide range of people. Relationships can be built and effective work performed in a remote setting,
+            I'm
+            looking forward to continuing to do so.</p>
+        </div>
+        <div class="exp-cont-inner">
+          <img class="remote-img" src="images/remote-work.png">
+        </div>
       </div>
+
+      <hr style="width: 350px; margin: 15px auto;">
+
+      <div class="educator-container">
+        <div class="exp-cont-inner">
+          <img class="educator-img" src="images/teacher.png">
+        </div>
+        <div class="exp-cont-inner">
+          <p class="exp-text-right">I excelled as a musician and educator. Order and cleanliness give way to beautiful
+            and functional ideas. Learning has been my profession, I have a practiced ability to approach a problem from
+            as many directions as it takes to get it perfect. Coding seems like a natural extension.</p>
+        </div>
+      </div>
+
+      <hr style="width: 350px; margin: 15px auto;">
+
+      <div class="detail-container">
+        <div class="exp-cont-inner">
+          <p class="exp-text-left">Every challenge in music or with a student is different. However you overcome it, the
+            solution must always function correctly. But the solutions are frequently unique. This appeals to me,
+            writing
+            and designing code feels much the same, with the added bonus of showing your work to the world!</p>
+        </div>
+        <div class="exp-cont-inner">
+          <img class="details-img" src="images/creativity.png">
+        </div>
+      </div>
+
     </div>
-
-    <div class="pre-remote-container">
-      <div class="inner-exp-cont">
-        <p class="experience-left">My music instruction business was conducted via online video chat. It allowed me to
-          reach a wide range of people. Relationships can be built and effective work performed in a remote setting, I'm
-          looking forward to continuing to do so.</p>
-      </div>
-      <div class="inner-exp-cont">
-        <img class="remote-img" src="images/remote-work.png">
-      </div>
-    </div>
-
-    <div class="pre-educator-container">
-      <div class="inner-exp-cont">
-        <img class="educator-img" src="images/teacher.png">
-      </div>
-      <div class="inner-exp-cont">
-        <p class="experience-right">I excelled as a musician and educator. Order and cleanliness give way to beautiful
-          and functional ideas. Learning has been my profession, I have a practiced ability to approach a problem from
-          as many directions as it takes to get it perfect. Coding seems like a natural extension.</p>
-      </div>
-    </div>
-
-    <div class="pre-detail-container">
-      <div class="inner-exp-cont">
-        <p class="experience-left">Every challenge in music or with a student is different. However you overcome it, the
-          solution must always function correctly. But the solutions are frequently unique. This appeals to me, writing
-          and designing code feels much the same, with the added bonus of showing your work to the world!</p>
-      </div>
-      <div class="inner-exp-cont">
-        <img class="details-img" src="images/creativity.png">
-      </div>
-    </div>
-
   </div>
 
-  <div class="organization-container">
+  <div class="banner">
     <div>
-      <h2 class="creativity-text"><em>Almost at the end now...</em></h2>
+      <h2 class="creativity-text">What do I say here? Something about the "Why?" involved with the hiring
+          process?</h2>
     </div>
   </div>
 
   <div class="skills-container">
-    <h2>Skills, education, and certificates</h2>
+
+    <h2>Languages, Certificates, and Education</h2>
 
     <div class="inner-skill-container">
 
       <div class="inner2-skill-container">
         <div class="skill-row-left">
+          <p class="skill-text">Full-stack 2020 WebDev Bootcamp<br>- Angela Yu</p>
+        </div>
+      </div>
+
+      <div class="inner2-skill-container">
+        <div class="skill-row-center">
           <p class="skill-text">
             HTML<br>
             CSS<br>
@@ -208,12 +228,6 @@
             Git & Github<br>
             Node/Express/EJS
           </p>
-        </div>
-      </div>
-
-      <div class="inner2-skill-container">
-        <div class="skill-row-center">
-          <p class="skill-text">Complete 2020 WebDev Bootcamp<br>Angela Yu<br>Full-stack</p>
         </div>
       </div>
 
@@ -238,9 +252,9 @@
           <input class="form-entry" type="text" name="user_name" oninput="formFieldCheck()">
           <label class="form-title">Email:</label>
           <input class="form-entry" type="email" name="user_email" oninput="formFieldCheck()">
-          <div class="stamp-wrap" ></div>
+          <div class="stamp-wrap"></div>
           <button id="contact-button" class="card-btn-topright" type="submit" onclick="contactResponse()">Send</button>
-        
+
         </div>
 
         <div class="card-bottom-section">
