added emailJS basic form. live tested

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   <meta name="author" content="William Rideout" />
   <meta name="copyright" content="2020" />
   <title>William Rideout</title>
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/styles.css">
 
   <!-- API -->
   <!-- need EmailJS code  -->
@@ -17,6 +17,29 @@
   <link rel="stylesheet" href="https://use.typekit.net/whd6rrl.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,400;0,700;1,400&family=Sacramento&display=swap">
+
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("user_py257ZOMhEmNaKdvol33C");
+    })();
+  </script>
+  <script type="text/javascript">
+    window.onload = function() {
+        document.getElementById('contact-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            // // generate a five digit number for the contact_number variable
+            // this.contact_number.value = Math.random() * 100000 | 0;
+            // these IDs from the previous steps
+            emailjs.sendForm('service_h2c2ek9', 'contact_form', this)
+                .then(function() {
+                    console.log('SUCCESS!');
+                }, function(error) {
+                    console.log('FAILED...', error);
+                });
+        });
+    }
+</script>
 </head>
 
 <body>
@@ -203,7 +226,7 @@
   <div class="banner">
     <div>
       <h2 class="creativity-text">What do I say here? Something about the "Why?" involved with the hiring
-          process?</h2>
+        process?</h2>
     </div>
   </div>
 
@@ -268,7 +291,7 @@
         <div class="response-box">
           <p>Thanks!</p>
           <p>Your message has been sent</p>
-          <p>I'm looking forward to talking with you, I will reach out within 2 or 3 business days.</p>
+          <p>I'm looking forward to talking with you, I will reach out within 1 or 2 business days.</p>
           <button type="button" class="hidden-button" onclick="location.href='/blog'" />Check out the Blog</button>
         </div>
       </div>
