--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
             emailjs.sendForm('service_h2c2ek9', 'contact_form', this)
                 .then(function() {
                     console.log('SUCCESS!');
+                    document.getElementById("hidden-response").style.display = "block";
+                    document.getElementById("contact-form").style.display = "none";
                 }, function(error) {
                     console.log('FAILED...', error);
                 });
@@ -273,7 +275,7 @@
         <div class="card-top-section">
           <label class="form-title">Your Name:</label>
           <input class="form-entry" type="text" name="user_name" oninput="formFieldCheck()">
-          <label class="form-title">Email:</label>
+          <label class="form-title">Contact Email:</label>
           <input class="form-entry" type="email" name="user_email" oninput="formFieldCheck()">
           <div class="stamp-wrap"></div>
           <button id="contact-button" class="card-btn-topright" type="submit" onclick="contactResponse()">Send</button>
@@ -281,7 +283,7 @@
         </div>
 
         <div class="card-bottom-section">
-          <label class="form-title">Message:</label>
+          <label class="form-title">How can I help you?</label>
           <textarea class="form-textarea" name="message" oninput="formFieldCheck()"></textarea>
         </div>
 
@@ -292,7 +294,6 @@
           <p>Thanks!</p>
           <p>Your message has been sent</p>
           <p>I'm looking forward to talking with you, I will reach out within 1 or 2 business days.</p>
-          <button type="button" class="hidden-button" onclick="location.href='/blog'" />Check out the Blog</button>
         </div>
       </div>
 
