--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,12 @@
             event.preventDefault();
             // // generate a five digit number for the contact_number variable
             // this.contact_number.value = Math.random() * 100000 | 0;
-            // these IDs from the previous steps
+            // sendForm(SERVICE_ID, CONTACT_TEMPLATE)
             emailjs.sendForm('service_h2c2ek9', 'contact_form', this)
                 .then(function() {
                     console.log('SUCCESS!');
-                    document.getElementById("hidden-response").style.display = "block";
-                    document.getElementById("contact-form").style.display = "none";
+                    testThis();
+                    
                 }, function(error) {
                     console.log('FAILED...', error);
                 });
@@ -292,7 +292,7 @@
       <div id="hidden-response" class="hidden-response">
         <div class="response-box">
           <p>Thanks!</p>
-          <p>Your message has been sent</p>
+          <p>I'll receive your message soon.</p>
           <p>I'm looking forward to talking with you, I will reach out within 1 or 2 business days.</p>
         </div>
       </div>
