adds fetch post req, nodemailer sends, no response

--- a/public/index.html
+++ b/public/index.html
@@ -245,7 +245,7 @@
 
     <div class="card--frame">
 
-      <form id="contact-form" class="contact-form" name="contact" method="POST">
+      <form id="contact-form" class="contact-form" name="contact" >
 
         <div class="card-top-section">
           <label class="form-title">Your Name:</label>
@@ -253,7 +253,7 @@
           <label class="form-title">Contact Email:</label>
           <input class="form-entry" type="email" name="user_email" oninput="formFieldCheck()">
           <div class="stamp-wrap"></div>
-          <button id="contact-button" class="card-btn-topright" type="submit" onclick="fetchJSON()">Send</button>
+          <button id="contact-button" class="card-btn-topright" type="submit">Send</button>
 
         </div>
 
