adds fetch.then.then and error handler. local tested

--- a/public/index.html
+++ b/public/index.html
@@ -265,10 +265,15 @@
       </form>
 
       <div id="hidden-response" class="hidden-response">
-        <div class="response-box">
+        <div id="success" class="response-box">
           <p>Thanks!</p>
           <p>I'll receive your message soon.</p>
           <p>I'm looking forward to talking with you, I will reach out within 1 or 2 business days.</p>
+        </div>
+        <div id="error" class="response-box">
+          <p>Ah bummer!</p>
+          <p>Something went wrong. But I've built a backup plan.</p>
+          <p>Here is an old-fashioned mailto:</p>
         </div>
       </div>
 
