minor rf&c of nodemailer. adds booleans. local tested

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <body>
 
   <div class="top-container">
-    <h1>hi, i'm ash</h1>
+    <h1>Hi, I'm Ash Thomas</h1>
     <img class="avatar" src="/images/avatar.png">
     <h2>i'm a web developer.</h2>
   </div>
