adds live tested.

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="William Rideout" />
+  <meta name="author" content="Ashley Thomas" />
   <meta name="copyright" content="2020" />
-  <title>William Rideout</title>
+  <title>Ash Thomas Web</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css">
 
@@ -23,7 +23,7 @@
 <body>
 
   <div class="top-container">
-    <h1>Hi, I'm Ash Thomas</h1>
+    <h1>hi, i'm ash thomas</h1>
     <img class="avatar" src="/images/avatar.png">
     <h2>i'm a web developer.</h2>
   </div>
@@ -62,7 +62,7 @@
           <h4>Stack</h4>
           <p>Node.js, Express, Ejs, JS, Prismic, Curator API, EmailJS</p>
           <button class="github-btn" type="button"
-            onclick="window.location.href='https://github.com/rideoutweb/freelance--loose-leash-dog'"
+            onclick="window.location.href='https://github.com/rideoutweb/client--loose-leash-dog'"
             target="_blank">View GitHub Repo</button>
         </div>
 
